# conjira-cli

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: AGENT_USAGE.md  RELEASING.md
local/: agent.env.example
scripts/: setup-conjira-macos.sh
src/conjira_cli/: __main__.py  cli.py  client.py  config.py  inline_comments.py  markdown_export.py  markdown_import.py  section_edit.py  setup_macos.py  tree_export.py
tests/: test_cli.py  test_client.py  test_config.py  test_inline_comments.py  test_markdown_export.py  test_markdown_import.py  test_section_edit.py  test_setup_macos.py  test_tree_export.py
