[build-system]
requires = ["setuptools>=68", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "conjira-cli"
version = "0.2.0"
description = "Unofficial agent-friendly CLI for self-hosted Confluence and Jira"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "quanttraderkim" }
]
dependencies = []

[project.scripts]
conjira = "conjira_cli.cli:main"
conjira-cli = "conjira_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
